zh/mysql-8.4/0.0.4/reference.mdx
---
noindex: true
title: 系统参考
description: 用于查询扩展元数据和服务器状态的 VillageSQL 系统视图和变量
---

使用以下标准 SQL 接口查询扩展元数据和服务器状态。

---

## 系统视图

### INFORMATION_SCHEMA.EXTENSIONS

列出所有当前安装的 VillageSQL 扩展。

<Note>
`INSTALL EXTENSION` 和 `UNINSTALL EXTENSION` 是 VillageSQL SQL 扩展。
它们不是 MySQL 8.4 标准语法的组成部分。
</Note>

**已知列：**

| 列名 | 类型 | 描述 |
|--------|------|-------------|
| `EXTENSION_NAME` | varchar | 已安装扩展的名称 |
| `EXTENSION_VERSION` | varchar | 扩展报告的版本字符串 |

**示例：**
```sql
-- Install an extension (VillageSQL-specific syntax)
INSTALL EXTENSION vsql_complex;

-- List all installed extensions
SELECT * FROM INFORMATION_SCHEMA.EXTENSIONS;

-- Check a specific extension's version
SELECT EXTENSION_VERSION
FROM INFORMATION_SCHEMA.EXTENSIONS
WHERE EXTENSION_NAME = 'vsql_complex';
```

**示例输出**（实际版本字符串取决于已安装的扩展）：
```
+------------------+-------------------+
| EXTENSION_NAME   | EXTENSION_VERSION |
+------------------+-------------------+
| vsql_complex     | 0.0.1             |
| vsql_uuid        | 0.2.1             |
+------------------+-------------------+
```

`EXTENSION_NAME` 值均为小写，与传递给 `make_extension()` 的名称匹配。

该视图反映当前的安装状态。

---

### INFORMATION_SCHEMA.COLUMNS（自定义类型）

使用自定义扩展类型的列可以通过标准的 `INFORMATION_SCHEMA.COLUMNS` 视图查看。自定义类型在 `DATA_TYPE` 和 `COLUMN_TYPE` 列中显示为 `extension_name.type_name`（例如，`vsql_complex.COMPLEX`）。

**示例：**
```sql
-- Find all columns using custom extension types
SELECT TABLE_SCHEMA, TABLE_NAME, COLUMN_NAME, DATA_TYPE
FROM INFORMATION_SCHEMA.COLUMNS
WHERE DATA_TYPE LIKE '%.%'
ORDER BY TABLE_SCHEMA, TABLE_NAME;

-- Find columns using a specific extension's types
SELECT TABLE_SCHEMA, TABLE_NAME, COLUMN_NAME, DATA_TYPE
FROM INFORMATION_SCHEMA.COLUMNS
WHERE DATA_TYPE LIKE 'vsql_complex.%';
```

**示例输出：**
```
+--------------+------------+-------------+---------------------+
| TABLE_SCHEMA | TABLE_NAME | COLUMN_NAME | DATA_TYPE           |
+--------------+------------+-------------+---------------------+
| mydb         | signals    | impedance   | vsql_complex.COMPLEX|
| mydb         | signals    | frequency   | vsql_complex.COMPLEX|
+--------------+------------+-------------+---------------------+
```

---

### INFORMATION_SCHEMA.EXTENSION_REGISTRATION

将每个已加载扩展的内存中 VEF 注册结构作为 JSON 文档公开。使用它来验证服务器是否在 `INSTALL EXTENSION` 之后正确解析了扩展的函数、类型和系统变量。

```sql
SELECT EXTENSION_NAME, NEGOTIATED_PROTOCOL, REGISTRATION_JSON
FROM INFORMATION_SCHEMA.EXTENSION_REGISTRATION
WHERE EXTENSION_NAME = 'vsql_complex';
```

| 列名 | 类型 | 描述 |
|--------|------|-------------|
| `EXTENSION_NAME` | `VARCHAR(64)` | 已安装扩展的名称。 |
| `NEGOTIATED_PROTOCOL` | `BIGINT UNSIGNED` | 扩展和服务器之间协商的 VEF 协议版本。 |
| `REGISTRATION_JSON` | `longtext` | `vef_registration_t` 结构的 JSON 序列化，包括 `funcs` 和 `types` 数组。 |

---

## 常用查询

### 查找扩展依赖项

在卸载扩展之前，查找哪些列使用了特定扩展的类型：

```sql
SELECT TABLE_SCHEMA, TABLE_NAME, COLUMN_NAME, DATA_TYPE
FROM INFORMATION_SCHEMA.COLUMNS
WHERE DATA_TYPE LIKE 'vsql_complex.%';
```

### 列出所有扩展及其自定义类型列

```sql
-- All installed extensions
SELECT EXTENSION_NAME, EXTENSION_VERSION
FROM INFORMATION_SCHEMA.EXTENSIONS
ORDER BY EXTENSION_NAME;

-- All columns using custom types across all extensions
SELECT TABLE_SCHEMA, TABLE_NAME, COLUMN_NAME, DATA_TYPE
FROM INFORMATION_SCHEMA.COLUMNS
WHERE DATA_TYPE LIKE '%.%'
ORDER BY DATA_TYPE, TABLE_SCHEMA, TABLE_NAME;
```

### 查找使用扩展类型的表

```sql
SELECT TABLE_SCHEMA, TABLE_NAME, COLUMN_NAME, DATA_TYPE
FROM INFORMATION_SCHEMA.COLUMNS
WHERE DATA_TYPE LIKE 'vsql_complex.%'
ORDER BY TABLE_SCHEMA, TABLE_NAME;
```

---

## 系统变量

### veb_dir

运行时只读。服务器查找 `.veb` 扩展包文件的目录路径。在 `my.cnf` 的 `[mysqld]` 下设置；无法在不重新启动服务器的情况下更改。

```sql
SHOW VARIABLES LIKE 'veb_dir';
```

**作用域：**全局，运行时只读。在 `my.cnf` 中配置：

```ini
[mysqld]
veb_dir=/path/to/extensions/
```

仅支持单个目录。有关放置和故障排除，请参阅 [管理扩展](/zh/mysql-8.4/0.0.4/managing)。

---

### villagesql_server_version

只读全局变量。返回编译到服务器二进制文件中的 VillageSQL 版本字符串。这与 `villagesql_schema_version` 不同，后者跟踪内部元数据目录版本。

```sql
SELECT @@villagesql_server_version;
-- Example output: 0.0.4 (release builds)
-- Development builds include a commit suffix: 0.0.4-dev-03d249dd

-- Show all VillageSQL system variables at once
SHOW VARIABLES LIKE 'villagesql_%';
```

**作用域：**全局，只读。无法在运行时设置。

---

### villagesql_vef_server_protocol

只读全局变量。返回此服务器构建支持的最高 VEF 协议版本。扩展作者可以将此值与 `types.h` 中的协议常量进行比较，以确定在注册期间哪些 ABI 功能可用。

```sql
SELECT @@villagesql_vef_server_protocol;
```

| 属性 | 值 |
|----------|-------|
| **作用域** | 全局 |
| **访问权限** | 只读 |
| **类型** | 无符号整数（`0`–`255`） |
| **当前值** | `4` (`VEF_PROTOCOL_4`) |

该值反映了编译时常量 `vef_server_protocol_version`，并且无法在运行时更改。

---

## 后续步骤

<CardGroup cols={2}>
  <Card
    title="管理扩展"
    icon="sliders"
    href="/zh/mysql-8.4/0.0.4/managing"
  >
    监控和排除扩展故障
  </Card>
  <Card
    title="安装扩展"
    icon="download"
    href="/zh/mysql-8.4/0.0.4/install"
  >
    添加新的扩展
  </Card>
  <Card
    title="扩展架构"
    icon="sitemap"
    href="/zh/mysql-8.4/0.0.4/architecture"
  >
    了解内部结构
  </Card>
  <Card
    title="可用扩展"
    icon="list"
    href="/zh/extensions"
  >
    浏览扩展目录
  </Card>
</CardGroup>